squashing bugs

--- a/src/styles.scss
+++ b/src/styles.scss
@@ -52,7 +52,7 @@ height: fit-content;
     .completed{
         background-color: green;
         order: 2;
-        width: 33.33%;
+        max-width: 33.33%;
     }
     
 
